--- a/Adolf.html
+++ b/Adolf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://cdn.ckeditor.com/4.16.2/standard/ckeditor.js"></script>
+<script src="//cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>
     <link rel="stylesheet" type="text/css" href="csshit.css">
 	<title>بایوگرافی هیتلر</title>
 </head>
